@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CSSMatrix interface</title>
+    <title>DOMMatrix interface</title>
     <meta charset='utf-8'>
     <!--<script src='respec-w3c-common.js' class='remove'></script>-->
     <script src="respec/respec.js" class="remove"></script>
@@ -128,29 +128,31 @@
     </section>
 -->
     <section>
-      <h2>The <a>CSSMatrix</a> interface</h2>
-
-      <p class="issue">The WG requested renaming the interface and omit the CSS prefix. Suggestions are TransformMatrix, TransformationMatrix or simply Matrix.</p>
+      <h2>The <a>DOMMatrix</a> interface</h2>
 
       <p>
-        The <a>CSSMatrix</a> interface represents a mathematical matrix with the purpose of describing transformations a graphical contexts. The following sections describe the details of the interface. For the full interface see <a href="#webidl-ref">Interface summary</a>.
+        The <a>DOMMatrix</a> interface represents a mathematical matrix with the purpose of describing transformations a graphical contexts. The following sections describe the details of the interface. For the full interface see <a href="#webidl-ref">Interface summary</a>.
+      </p>
+
+      <p>
+        <a>DOMMatrix</a> aims to replace the SVGMatrix interface from SVG [[SVG11]]. However, the SVGMatrix interface is mandatory for user agents with support for SVG. The SVGMatrix interface must be an alias to the DOMMatrix interface, the sameway as the HTMLDocument interface is to the Document interface.
       </p>
 
       <div class="figure">
         <img src="images/4x4matrix.png" alt="4x4 matrix with items m11 to m44">
-        <p class="capture">A 4x4 matrix representing a <a>CSSMatrix</a> with items m11 to m44.</p>
+        <p class="capture">A 4x4 matrix representing a <a>DOMMatrix</a> with items m11 to m44.</p>
       </div>
 
-      <p class="issue">It needs to be decided if CSSMatrix stored single or double precision floating point numbers.</p>
+      <p class="issue">It needs to be decided if DOMMatrix stored single or double precision floating point numbers.</p>
 
       <section>
         <h3>The constructors</h3>
 
         <p>
-          A series of constructors to create a <a>CSSMatrix</a> object.
+          A series of constructors to create a <a>DOMMatrix</a> object.
         </p>
 
-        <dl title='interface CSSMatrix' class='idl'>
+        <dl title='interface DOMMatrix' class='idl'>
           <dt>Constructor()</dt>
           <dd>Creates an identity matrix.</dd>
           <dt>Constructor()</dt>
@@ -161,11 +163,11 @@
             </dl>
             The DOMString must consist of a transform function list as specified by CSS Transforms.
             <div class='example'>
-              <p>In the following example a CSS Transform string is passed to the CSSMatrix constructor.</p>
-              <pre><code>var matrix = new CSSMatrix("translate(20px,20px), scale(2,3), rotate(45deg)"</code></pre>
+              <p>In the following example a CSS Transform string is passed to the DOMMatrix constructor.</p>
+              <pre><code>var matrix = new DOMMatrix("translate(20px,20px), scale(2,3), rotate(45deg)"</code></pre>
               <p>The resulting matrix is equal to the following sequence of method calls:</p>
               <pre><code>
-var matrix = new CSSMatrix();
+var matrix = new DOMMatrix();
 matrix.translateBy(20,20);
 matrix.scaleNonUniformBy(2,3);
 matrix.rotateBy(45);
@@ -177,7 +179,7 @@ matrix.rotateBy(45);
           <dt>Constructor()</dt>
           <dd>
             <dl class='parameters'>
-              <dt>CSSMatrix other</dt>
+              <dt>DOMMatrix other</dt>
               <dd>All element values of the current matrix are set to the element values of the other matrix.</dd>
             </dl>
           </dd>
@@ -228,39 +230,39 @@ matrix.rotateBy(45);
           <h3>Two-dimensional attributes</h3>
 
           <p>
-            If a <a>CSSMatrix</a> just consists of 2D transformations the 6 values <code>a</code> to <code>f</code> can represent the transformation matrix. If the <a>CSSMatrix</a> object is immutable, a <var>DOMException</var> with name <code>NoModificationAllowedError</code> must be thrown on setting the attributes.
+            If a <a>DOMMatrix</a> just consists of 2D transformations the 6 values <code>a</code> to <code>f</code> can represent the transformation matrix. If the <a>DOMMatrix</a> object is immutable, a <var>DOMException</var> with name <code>NoModificationAllowedError</code> must be thrown on setting the attributes.
           </p>
 
           <p>
             The following attributes <code>a</code> to <code>f</code> are aliases to the two-dimensional elements of the 4x4 matrix.
           </p>
 
-          <dl title='partial interface CSSMatrix' class='idl'>
+          <dl title='partial interface DOMMatrix' class='idl'>
             <dt>// These attributes are simple aliases for certain elements of the 4x4 matrix</dt>
             <dd></dd>
             <dt>attribute unrestricted double a</dt>
             <dd>
-              <p>Corresponds to the attribute <span>m11</span> of the CSSMatrix interface.</p>
+              <p>Corresponds to the attribute <span>m11</span> of the DOMMatrix interface.</p>
             </dd>
             <dt>attribute unrestricted double b</dt>
             <dd>
-              <p>Corresponds to the attribute <span>m12</span> of the CSSMatrix interface.</p>
+              <p>Corresponds to the attribute <span>m12</span> of the DOMMatrix interface.</p>
             </dd>
             <dt>attribute unrestricted double c</dt>
             <dd>
-              <p>Corresponds to the attribute <span>m21</span> of the CSSMatrix interface.</p>
+              <p>Corresponds to the attribute <span>m21</span> of the DOMMatrix interface.</p>
             </dd>
             <dt>attribute unrestricted double d</dt>
             <dd>
-              <p>Corresponds to the attribute <span>m22</span> of the CSSMatrix interface.</p>
+              <p>Corresponds to the attribute <span>m22</span> of the DOMMatrix interface.</p>
             </dd>
             <dt>attribute unrestricted double e</dt>
             <dd>
-              <p>Corresponds to the attribute <span>m41</span> of the CSSMatrix interface.</p>
+              <p>Corresponds to the attribute <span>m41</span> of the DOMMatrix interface.</p>
             </dd>
             <dt>attribute unrestricted double f</dt>
             <dd>
-              <p>Corresponds to the attribute <span>m42</span> of the CSSMatrix interface.</p>
+              <p>Corresponds to the attribute <span>m42</span> of the DOMMatrix interface.</p>
             </dd>
           </dl>
         </section>
@@ -269,10 +271,10 @@ matrix.rotateBy(45);
           <h3>Three-dimensional attributes</h3>
 
           <p>
-            The following attributes <code>m11</code> to <code>m44</code> represent the elements of the 4x4 matrix. The coordinates are in column-major order. If the <a>CSSMatrix</a> object is immutable, a <var>DOMException</var> with name <code>NoModificationAllowedError</code> must be thrown on setting the attributes.
+            The following attributes <code>m11</code> to <code>m44</code> represent the elements of the 4x4 matrix. The coordinates are in column-major order. If the <a>DOMMatrix</a> object is immutable, a <var>DOMException</var> with name <code>NoModificationAllowedError</code> must be thrown on setting the attributes.
           </p>
 
-          <dl title='partial interface CSSMatrix' class='idl'>
+          <dl title='partial interface DOMMatrix' class='idl'>
             <dt>attribute unrestricted double m11</dt>
             <dd>
               <p>
@@ -376,13 +378,13 @@ matrix.rotateBy(45);
           <h3>Immutable transformation methods</h3>
 
           <p>
-            The following methods do not modify the current matrix and return new <a>CSSMatrix</a> object.
+            The following methods do not modify the current matrix and return new <a>DOMMatrix</a> object.
           </p>
 
-          <dl title='partial interface CSSMatrix' class='idl'>
+          <dl title='partial interface DOMMatrix' class='idl'>
             <dt>// Immutable transform methods</dt>
             <dd></dd>
-            <dt>CSSMatrix translate()</dt>
+            <dt>DOMMatrix translate()</dt>
             <dd>
               <dl class='parameters'>
                 <dt>unrestricted double tx</dt>
@@ -395,7 +397,7 @@ matrix.rotateBy(45);
               <p>Post-multiplies a translation transformation on the current matrix and returns the resulting matrix. The current matrix is not modified.</p>
               <p>The 3D translation matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#Translate3dDefined">described</a> in CSS Transforms [[!CSS3-TRANSFORMS]].</p>
             </dd>
-            <dt>CSSMatrix scale()</dt>
+            <dt>DOMMatrix scale()</dt>
             <dd>
               <dl class='parameters'>
                 <dt>unrestricted double scale</dt>
@@ -408,7 +410,7 @@ matrix.rotateBy(45);
               <p>Post-multiplies a uniform 2D scale transformation (<code>m11 = m22 = scale</code>) on the current matrix with the given origin and returns the resulting matrix. The current matrix is not modified.</p>
               <p>The 2D scale matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#ScaleDefined">described</a> in CSS Transforms with <code>sx = sy = scale</code>. This does not include the origin translation. [[!CSS3-TRANSFORMS]].</p>
             </dd>
-            <dt>CSSMatrix scale3d()</dt>
+            <dt>DOMMatrix scale3d()</dt>
             <dd>
               <dl class='parameters'>
                 <dt>unrestricted double scale</dt>
@@ -423,7 +425,7 @@ matrix.rotateBy(45);
               <p>Post-multiplies a uniform scale transformation (<code>m11 = m22 = m33 = scale</code>) on the current matrix with the given origin and returns the resulting matrix. The current matrix is not modified.</p>
               <p>The 3D scale matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#Scale3dDefined">described</a> in CSS Transforms with <code>sx = sy = sz = scale</code>. This does not include the origin translation. [[!CSS3-TRANSFORMS]].</p>
             </dd>
-            <dt>CSSMatrix scaleNonUniform()</dt>
+            <dt>DOMMatrix scaleNonUniform()</dt>
             <dd>
               <dl class='parameters'>
                 <dt>unrestricted double scaleX</dt>
@@ -442,7 +444,7 @@ matrix.rotateBy(45);
               <p>Post-multiplies a non-uniform scale transformation on the current matrix with the given origin and returns the resulting matrix. The current matrix is not modified.</p>
               <p>The 3D scale matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#Scale3dDefined">described</a> in CSS Transforms with <code>sx = scaleX</code>,  <code>sy = scaleY</code> and <code>sz = scaleZ</code>. This does not include the origin translation. [[!CSS3-TRANSFORMS]].</p>
             </dd>
-            <dt>CSSMatrix rotate()</dt>
+            <dt>DOMMatrix rotate()</dt>
             <dd>
               <dl class='parameters'>
                 <dt>unrestricted double angle</dt>
@@ -455,7 +457,7 @@ matrix.rotateBy(45);
               <p>Post-multiplies a rotation transformation on the current matrix with the given origin and returns the resulting matrix. The current matrix is not modified.</p>
               <p>The 2D rotation matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#RotateDefined">described</a> in CSS Transforms with <code>alpha = angle</code>. This does not include the origin translation. [[!CSS3-TRANSFORMS]].</p>
             </dd>
-            <dt>CSSMatrix rotateFromVector(unrestricted double x, unrestricted double y)</dt>
+            <dt>DOMMatrix rotateFromVector(unrestricted double x, unrestricted double y)</dt>
             <dd>
               <dl class='parameters'>
                 <dt>unrestricted double x</dt>
@@ -466,7 +468,7 @@ matrix.rotateBy(45);
               <p>Post-multiplies a rotation transformation on the current matrix and returns the resulting matrix. The rotation angle is determined by the angle between the vector (1,0)<sup>T</sup> and (x,y)<sup>T</sup> in the clockwise direction. If <code>x</code> and <code>y</code> should both be zero, the angle is specified as zero. The current matrix is not modified.</p>
               <p>The 2D rotation matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#RotateDefined">described</a> in CSS Transforms where <code>alpha</code> is the angle between the vector (1,0)<sup>T</sup> and (x,y)<sup>T</sup> in degrees [[!CSS3-TRANSFORMS]].</p>
             </dd>
-            <dt>CSSMatrix rotateAxisAngle(unrestricted double x, unrestricted double y, unrestricted double z, unrestricted double angle)</dt>
+            <dt>DOMMatrix rotateAxisAngle(unrestricted double x, unrestricted double y, unrestricted double z, unrestricted double angle)</dt>
             <dd>
               <dl class='parameters'>
                 <dt>unrestricted double x</dt>
@@ -481,7 +483,7 @@ matrix.rotateBy(45);
               <p>Post-multiplies a rotation transformation on the current matrix and returns the resulting matrix. The rotation of the transform is applied around the given vector. The current matrix is not modified.</p>
               <p>The 3D rotation matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#Rotate3dDefined">described</a> in CSS Transforms with <code>alpha = angle</code> [[!CSS3-TRANSFORMS]].</p>
             </dd>
-            <dt>CSSMatrix skewX()</dt>
+            <dt>DOMMatrix skewX()</dt>
             <dd>
               <dl class='parameters'>
                 <dt>unrestricted double sx</dt>
@@ -490,7 +492,7 @@ matrix.rotateBy(45);
               <p>Post-multiplies a skewX transformation on the current matrix and returns the resulting matrix. The current matrix is not modified.</p>
               <p>The 2D skewX matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#SkewXDefined">described</a> in CSS Transforms with <code>alpha = sx</code> [[!CSS3-TRANSFORMS]].</p>
             </dd>
-            <dt>CSSMatrix skewY()</dt>
+            <dt>DOMMatrix skewY()</dt>
             <dd>
               <dl class='parameters'>
                 <dt>unrestricted double sy</dt>
@@ -499,23 +501,23 @@ matrix.rotateBy(45);
               <p>Post-multiplies a skewX transformation on the current matrix and returns the resulting matrix.</p>
               <p>The 2D skewY matrix is <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#SkewYDefined">described</a> in CSS Transforms with <code>beta = sy</code> [[!CSS3-TRANSFORMS]].</p>
             </dd>
-            <dt>CSSMatrix multiply()</dt>
+            <dt>DOMMatrix multiply()</dt>
             <dd>
               <dl class='parameters'>
-                <dt>CSSMatrix other</dt>
+                <dt>DOMMatrix other</dt>
                 <dd>Other matrix for multiplication</dd>
               </dl>
               Performs matrix multiplication. This matrix is post-multiplied by the other matrix, returning the resulting new matrix. The current matrix is not modified.
             </dd>
-            <dt>CSSMatrix flipX()</dt>
+            <dt>DOMMatrix flipX()</dt>
             <dd>
-              Post-multiplies the transformation <code>CSSMatrix(-1, 0, 0, 1, 0, 0)</code> and returns the resulting matrix. The current matrix is not modified.
+              Post-multiplies the transformation <code>DOMMatrix(-1, 0, 0, 1, 0, 0)</code> and returns the resulting matrix. The current matrix is not modified.
             </dd>
-            <dt>CSSMatrix flipY()</dt>
+            <dt>DOMMatrix flipY()</dt>
             <dd>
-              Post-multiplies the transformation <code>CSSMatrix(1, 0, 0, -1, 0, 0)</code> and returns the resulting matrix. The current matrix is not modified.
+              Post-multiplies the transformation <code>DOMMatrix(1, 0, 0, -1, 0, 0)</code> and returns the resulting matrix. The current matrix is not modified.
             </dd>
-            <dt>CSSMatrix inverse()</dt>
+            <dt>DOMMatrix inverse()</dt>
             <dd>
               Returns the inverted matrix of the current matrix. The current matrix is not modified.
             </dd>
@@ -526,16 +528,16 @@ matrix.rotateBy(45);
           <h3>Mutable transformation methods</h3>
 
           <p>
-            The following methods do modify the current matrix. If the <a>CSSMatrix</a> object is immutable, a <var>DOMException</var> with name <code>NoModificationAllowedError</code> must be thrown on calling the operations below.
+            The following methods do modify the current matrix. If the <a>DOMMatrix</a> object is immutable, a <var>DOMException</var> with name <code>NoModificationAllowedError</code> must be thrown on calling the operations below.
           </p>
 
-          <dl title='partial interface CSSMatrix' class='idl'>
+          <dl title='partial interface DOMMatrix' class='idl'>
             <dt>// Mutable transform methods</dt>
             <dd></dd>
             <dt>void multiplyBy()</dt>
             <dd>
               <dl class='parameters'>
-                <dt>CSSMatrix other</dt>
+                <dt>DOMMatrix other</dt>
                 <dd>The matrix that gets post-multiplied.</dd>
               </dl>
               The other matrix gets post-multiplied to the current matrix.
@@ -543,7 +545,7 @@ matrix.rotateBy(45);
             <dt>void preMultiplyBy()</dt>
             <dd>
               <dl class='parameters'>
-                <dt>CSSMatrix other</dt>
+                <dt>DOMMatrix other</dt>
                 <dd>The matrix that gets pre-multiplied.</dd>
               </dl>
               The other matrix gets pre-multiplied to the current matrix.
@@ -676,10 +678,10 @@ matrix.rotateBy(45);
           <h3>Helper methods</h3>
 
           <p>
-            The following helper methods do not modify the <a>CSSMatrix</a> object.
+            The following helper methods do not modify the <a>DOMMatrix</a> object.
           </p>
 
-          <dl title='partial interface CSSMatrix' class='idl'>
+          <dl title='partial interface DOMMatrix' class='idl'>
             <dt>// Helper methods</dt>
             <dd></dd>
             <dt>boolean is2D()</dt>
@@ -709,7 +711,7 @@ matrix.rotateBy(45);
 <!--            
             <dt>DecomposedMatrix decompose()</dt>
             <dd>
-              Returns the decomposed matrix values of the current matrix as a DecomposedMatrix dictionary. The decomposing follows the algorithm of <a href="#decomposing-the-matrix">Decomposing the CSSMatrix</a>.
+              Returns the decomposed matrix values of the current matrix as a DecomposedMatrix dictionary. The decomposing follows the algorithm of <a href="#decomposing-the-matrix">Decomposing the DOMMatrix</a>.
             </dd>
 -->
             <dt>void stringifier()</dt>
@@ -718,13 +720,13 @@ matrix.rotateBy(45);
               <p class='issue'>Should be <code>stringifier;</code>. Bug in old respec tool.</p>
               <div class='example'>
                 <p>In this example a matrix is created and several methods with 2D transformations are called.</p>
-                <pre><code>var matrix = new CSSMatrix();
+                <pre><code>var matrix = new DOMMatrix();
 matrix.scaleBy(2);
 matrix.translateBy(20,20);</code></pre>
                 <p>The <code>matrix.toString()</code> returns the DOM string:</p>
                 <pre><code>"matrix(2,0,0,2,20,20)"</code></pre>
                 <p>For 3D operations, the <var>stringifier</var> returns DOM string representing a 3D matrix.</p>
-                <pre><code>var matrix = new CSSMatrix();
+                <pre><code>var matrix = new DOMMatrix();
 matrix.scale3dBy(2);</code></pre>
                 <p>Calling <code>matrix.toString()</code> after the snippet above returns the DOM string:</p>
                 <pre><code>"matrix3d(2,0,0,0,0,2,0,0,0,0,2,0,0,0,0,1)"</code></pre>
@@ -736,7 +738,7 @@ matrix.scale3dBy(2);</code></pre>
 
     <section>
       <h2>Transformation to a 3x2 matrix</h2>
-      <p>Host languages might require an internal 3x2 matrix abstraction of a <a>CSSMatrix</a>. This transformation from a 4x4 matrix to a 3x2 by loosing information is described in section <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#MatrixDefined">Mathematical Description of Transform Functions</a> of CSS Transforms [[!CSS3-TRANSFORMS]].</p>
+      <p>Host languages might require an internal 3x2 matrix abstraction of a <a>DOMMatrix</a>. This transformation from a 4x4 matrix to a 3x2 by loosing information is described in section <a href="http://www.w3.org/TR/2012/WD-css3-transforms-20120911/#MatrixDefined">Mathematical Description of Transform Functions</a> of CSS Transforms [[!CSS3-TRANSFORMS]].</p>
     </section>
 
     <section class='appendix' id="webidl-ref">
