@@ -1,3 +1,6 @@
+2013-09-13  Dirk Schulze  <dschulze@adobe.com>
+	Rename CSSMatrix to DOMMatrix after CSS WG decision.
+
 2013-08-22  Dirk Schulze  <dschulze@adobe.com>
 	Add issues about interface naming.
 
